<resources>
    <string name="app_name">Scanner</string>
    <string name="title_generator">Generator</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_settings">Settings</string>
    <string name="save_qr_code_title">Save</string>
    <string name="create">Create</string>
    <string name="title_scan_result">Scan Result</string>
    <string name="scan_with_camera">Scan with camera</string>
    <string name="tips_saved_to_gallery">Your QR code is saved to gallery</string>
    <string name="tips_permission_required">Please grant necessary permissions</string>
    <string name="qr_code_content_hint">Content</string>
    <string name="qr_code_content">Content</string>
    <string name="qr_code_content_too_long">Your content is too long</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="icon_none">None Icon</string>
    <string name="icon_default">Default</string>
    <string name="icon_custom">Custom Icon</string>
    <string name="crop_image">Crop Image</string>
    <string name="image_crop_done_title">Done</string>
    <string name="custom_icon_title">Custom Icon</string>
    <string name="custom_icon_change">Change</string>
    <string name="custom_icon_clear">Clear</string>
    <string name="share">Share</string>
    <string name="scan_from_file">Scan from file</string>
    <string name="qr_code_not_found">No QR Code found in image</string>
    <string name="qr_code_cancelled">Cancelled</string>
    <string name="tips_copied">Copied to clipboard</string>
    <string name="string_copy">Copy</string>
    <string name="auto_open_links_title">Open scanned links automatically</string>
    <string name="default_page_title">Home Page</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_about">About</string>
    <string name="authors_title">Authors</string>
    <string name="project_link_title">Project link</string>
    <string name="open_source_licenses">Open-source Licenses</string>
    <string name="authors_summary" translatable="false">5ec1cff,Withnohair,Dirkkroos</string>
    <string name="project_link_summary" translatable="false">https://github.com/a13e300/Scanner</string>
</resources>